created skincare_products endpoint
